--- a/index.html
+++ b/index.html
@@ -1,105 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Amey's Component library</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amey's Component library</title>
+    <!-- CSS way 1: Style Tag
+            <style>
+                body{
+                    color:red;
+
+                
+                }
+            <style> -->
+                <!-- Third way of doing CSS: external link -->
+                <link href ="style.css" rel ="Stylesheet"/>
+
+
 </head>
+
 <body>
-<h1>Amey's component library</h1>
+    <h1 id="lib-header">Amey's component library</h1>
 
-<p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent. </p>
+    <p class = "para">I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.
+    </p>
 
-<hr>
+    <hr>
 
-<h2>@typography</h2>
+    <h2>@typography</h2>
 
-<h2>This is the biggest heading</h2>
+    <h2>This is the biggest heading</h2>
 
-<h2>Ths is the second biggest heading.</h2>
+    <h2>Ths is the second biggest heading.</h2>
 
-<p>Let me show you the normal text.This is free flowing and will wrap at the end like a paragraph.</p>
+    <p>Let me show you the normal text.This is free flowing and will wrap at the end like a paragraph.</p>
 
-<small>This is relatively smaller text.</small>
-
-
-<hr>
-
-<h2>@container</h2>
-
-<h3>fluid container</h3>
-
-<div>This is a centered container and it will go till the specified width</div>
-
-<hr>
+    <small>This is relatively smaller text.</small>
 
 
-<h2>@links</h2>
-<a href ="/">Primary link</a>
-<a href="/">Secondary link</a>
+    <hr>
 
-<hr>
-<h2> @lsits</h2>
+    <h2>@container</h2>
 
-<h3>unordered list</h3>
-<ul>
-<li>Item one </li>
-<li>Item two</li>
-<li>Item three</li>
-<li>Item four</li>
+    <h3>fluid container</h3>
 
-</ul>
+    <div class = "para">This is a centered container and it will go till the specified width</div>
 
-<h3>Inline unorderd list </h3>
+    <hr>
 
 
-<ul>
-    <li>Inline Item One</li>
-    <li>Inline Item Two</li>
-    <li>Inline Item Three</li>
-    <li>Inline Item Four</li>
-</ul>
-<h3>reverse ordered list</h3>
-<ol>
-<li>milk</li>
-<li>eggs</li>
-<li>break</li>
-</ol>
+    <h2>@links</h2>
+    <a href="/">Primary link</a>
+    <a href="/">Secondary link</a>
 
-<h2>@nav</h2>
+    <hr>
+    <h2> @lsits</h2>
 
-<nav>
-    <div>I AM A Developer</div>
+    <h3>unordered list</h3>
     <ul>
-        <li>
-            <a href="/">Home</a>
-        </li>
-        <li>
-            <a href="/">Project</a>
+        <li>Item one </li>
+        <li>Item two</li>
+        <li>Item three</li>
+        <li>Item four</li>
 
-        </li>
-        <li>
-           <a href = "/">Blog</a>
-        </li>
     </ul>
-</nav>
 
-<hr>
-
-<h2>Header</h2>
-<header>
-<img src ="images/Portfolio.svg"/>
-<h1>Heading inside hero</h1>
-</header>
+    <h3>Inline unorderd list </h3>
 
 
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+        <li>Inline Item Four</li>
+    </ul>
+    <h3>reverse ordered list</h3>
+    <ol>
+        <li>milk</li>
+        <li>eggs</li>
+        <li>break</li>
+    </ol>
+
+    <h2>@nav</h2>
+
+    <nav>
+        <div>I AM A DEVELOPER.</div>
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/">Project</a>
+
+            </li>
+            <li>
+                <a href="/">Blog</a>
+            </li>
+        </ul>
+    </nav>
+
+    <hr>
+
+    <h2>@Header</h2>
+    <header>
+        <img
+            src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=693&q=80" />
+        <h1>Heading inside header</h1>
+    </header>
+
+    <hr>
+
+    <h2>@Section</h2>
+    <section>
+        <h3>white section</h3>
+        <p>This will Have gray background.</p>
+    </section>
+    <hr>
+    <h2>@footer</h2>
+    <footer>
+        <div>
+            Small heading inside footer
+        </div>
+        <ul>
+            <li>social one</li>
+            <li>social two</li>
+            <li>social three</li>
+        </ul>
+    </footer>
 
 
 
-<div style="height:30vh;">
+    <div style="height:30vh;">
 
-</div>
+    </div>
 
 
 </body>
+
 </html>
