--- a/index.html
+++ b/index.html
@@ -5,24 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amey's Component library</title>
-    <!-- CSS way 1: Style Tag
-            <style>
-                body{
-                    color:red;
 
                 
-                }
-            <style> -->
-                <!-- Third way of doing CSS: external link -->
                 <link href ="style.css" rel ="Stylesheet"/>
 
 
 </head>
 
 <body>
-    <h1 id="lib-header">Amey's component library</h1>
+    <h1>Amey's component library</h1>
 
-    <p class = "para">I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.
+    <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.
     </p>
 
     <hr>
@@ -34,6 +27,8 @@
     <h2>Ths is the second biggest heading.</h2>
 
     <p>Let me show you the normal text.This is free flowing and will wrap at the end like a paragraph.</p>
+    <p>This paragraph will hacve a 
+        <strong>bold</strong> text.</p>
 
     <small>This is relatively smaller text.</small>
 
@@ -44,7 +39,7 @@
 
     <h3>fluid container</h3>
 
-    <div class = "para">This is a centered container and it will go till the specified width</div>
+    <div>This is a centered container and it will go till the specified width</div>
 
     <hr>
 
