--- a/index.html
+++ b/index.html
@@ -39,14 +39,18 @@
 
     <h3>fluid container</h3>
 
-    <div>This is a centered container and it will go till the specified width</div>
+    <div class ="container
+     container-fluid">This is a fluid container and it will go till the end of the page</div>
+
+    <h3>center container</h3>
+    <div class ="container container-center">This is a centered container and it will go till  specified width.</div>
 
     <hr>
 
 
     <h2>@links</h2>
-    <a href="/">Primary link</a>
-    <a href="/">Secondary link</a>
+    <a class ="link link-primary" href="/">Primary link</a>
+    <a class ="link link-secondary" href="/">Secondary link</a>
 
     <hr>
     <h2> @lsits</h2>
