--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
 
 
     <h2>@links</h2>
-    <a class ="link link-primary" href="/">Primary link</a>
-    <a class ="link link-secondary" href="/">Secondary link</a>
+    <a class="link link-primary" href="/">Primary link</a>
+    <a class="link link-secondary" href="/">Secondary link</a>
 
     <hr>
-    <h2> @lsits</h2>
+    <h2> @list's</h2>
 
     <h3>unordered list</h3>
-    <ul>
+    <p>This lists will not have the bullet.</p>
+    <ul class = "lists-non-bullet" >
         <li>Item one </li>
         <li>Item two</li>
         <li>Item three</li>
@@ -67,14 +68,14 @@
     <h3>Inline unorderd list </h3>
 
 
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
-        <li>Inline Item Four</li>
+    <ul class = "lists-non-bullet">
+        <li class ="list-item-inline">Inline Item One</li>
+        <li class ="list-item-inline">Inline Item Two</li>
+        <li class ="list-item-inline">Inline Item Three</li>
+        <li class ="list-item-inline">Inline Item Four</li>
     </ul>
     <h3>reverse ordered list</h3>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>eggs</li>
         <li>break</li>
@@ -84,7 +85,7 @@
 
     <nav>
         <div>I AM A DEVELOPER.</div>
-        <ul>
+        <ul class="lists-non-bullet">
             <li>
                 <a href="/">Home</a>
             </li>
