--- a/index.html
+++ b/index.html
@@ -83,18 +83,19 @@
 
     <h2>@nav</h2>
 
-    <nav>
-        <div>I AM A DEVELOPER.</div>
-        <ul class="lists-non-bullet">
-            <li>
-                <a href="/">Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand" >I AM A DEVELOPER.</div>
+        <ul class="list-non-bullet nav-pills">
+            
+            <li class ="list-item-inline">
+                <a class ="link link-active" href="/">Home</a>
             </li>
-            <li>
-                <a href="/">Project</a>
+            <li class ="list-item-inline">
+                <a class ="link" href="/">Project</a>
 
             </li>
-            <li>
-                <a href="/">Blog</a>
+            <li class ="list-item-inline">
+                <a class ="link" href="/">Blog</a>
             </li>
         </ul>
     </nav>
