--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
     <hr>
 
-    <h2>@Header</h2>
-    <header>
-        <img
+    <h2>Portfolio</h2>
+    <heade class="hero">
+        <img class ="hero-img"
             src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=693&q=80" />
-        <h1>Heading inside header</h1>
+        <h1 class ="hero-heading">AMEY JOSHI <span class="heading-inverted">THE WEB DEVELOPER</span>.</h1>
     </header>
 
     <hr>
