--- a/lib/components.html
+++ b/lib/components.html
@@ -7,12 +7,14 @@
     <title>Amey's Component library</title>
 
 
-    <link href="style.css" rel="Stylesheet" />
+    <link href="/style.css" rel="Stylesheet" />
 
 
 </head>
 
-<body>
+<Body>
+    
+   
     <h1>Amey's component library</h1>
 
     <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.
@@ -84,14 +86,14 @@
     <h2>@nav</h2>
 
     <nav class="navigation container">
-        <div class="nav-brand">I AM A DEVELOPER.</div>
+        <div class="nav-brand">I AMA DEVELOPER.</div>
         <ul class="list-non-bullet nav-pills">
 
             <li class="list-item-inline">
                 <a class="link link-active" href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Project</a>
+                <a class="link" href="/">Projects</a>
 
             </li>
             <li class="list-item-inline">
@@ -103,68 +105,70 @@
     <hr>
 
     <h2>Portfolio</h2>
-    <heade class="hero">
+    <header class="hero">
         <img class="hero-img"
-            src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=693&q=80" />
+            src="https://images.unsplash.com/photo-1508317469940-e3de49ba902e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" />
         <h1 class="hero-heading">AMEY JOSHI <span class="heading-inverted">THE WEB DEVELOPER</span>.</h1>
-        </header>
+    </header>
+    <header class="hero">
+        <img class="hero-img"
+            src="https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" />
+        <h1 class="hero-heading">AMEY JOSHI <span class="heading-inverted">THE WEB DEVELOPER</span>.</h1>
+    </header>
 
-        <hr>
+    <hr>
 
-        <h2>@Section</h2>
-        <section class="section">
-            <div class="container container-center">
-                <h1>white section</h1>
-                <p>This will have white background.</p>
-            </div>
+    <h2>@Section</h2>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
+            <p>This will have white background.</p>
+        </div>
 
-        </section>
+    </section>
 
-        <section class="section ow">
-            <div class="container container-center">
-                <h1>off white section</h1>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>off white section</h1>
 
-                <p>This will have gray background.</p>
-
-            </div>
-
-
-        </section>
-
-        <hr>
-        <h2>@footer</h2>
-        <footer class="footer">
-            <div class="footer-header">
-                Small heading inside footer
-            </div>
-            <ul class="social-links lists-non-bullet">
-                <li
-                class="list-item-inline">
-                    <a class="link" href="/">
-                        social one
-                    </a>
-                </li>
-                <li
-                class="list-item-inline">
-                    <a class="link" href="/">
-                        social two
-                    </a>
-                </li>
-                <li
-                class="list-item-inline">
-                    <a class="link" href="/">
-                        social three
-                    </a>
-                </li>
-
-            </ul>
-        </footer>
-
-
-
-        <div style="height:30vh;">
+            <p>This will have gray background.</p>
 
         </div>
+
+
+    </section>
+
+    <hr>
+    <h2>@footer</h2>
+    <footer class="footer">
+        <div class="footer-header">
+            Small heading inside footer
+        </div>
+        <ul class="social-links lists-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    social one
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    social two
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    social three
+                </a>
+            </li>
+
+        </ul>
+    </footer>
+
+
+
+    <div style="height:30vh;">
+
+    </div>
 
 
 </body>
