--- a/blogs.html
+++ b/blogs.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" />
     <title>Blogs | AMEY JOSHI</title>
 </head>
+
 <body background="images\wood.jpg">
     <nav class="navigation container">
         <div class="nav-brand">I AM A DEVELOPER.</div>
@@ -21,12 +23,22 @@
             <li class="list-item-inline">
                 <a class="link link-active" href="blogs.html">Blogs</a>
             </li>
-            
+            <li class="list-item-inline">
+                <a class="link" href="blog1.html">Blog1</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="blogs2.html">Blog2</a>
+            </li>
         </ul>
     </nav>
     <h1>BLOG LIST</h1>
-    <a class="link link-primary" href="blog1.html">Sophia
-    </a>
-            
+    <ol>
+        <li><a class="link link-primary" href="blog1.html">Sophia
+            </a></li>
+        <li></li><a class="link link-primary" href="blogs2.html">Spreading Pandemic Awareness Through Art
+        </a></li>
+
+    </ol>
 </body>
+
 </html>
