--- a/blogs2.html
+++ b/blogs2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" />
-    <title>Spreading pandemic awareness through art</title>
+    <title>Spreading pandemic awareness through art!</title>
 </head>
 
 <body>
